--- a/about.html
+++ b/about.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home</title>
+    <title>Vercel HTML Starter</title>
+    <meta
+      name="description"
+      content="High-performance HTML based website template."
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="about.css" />
   </head>
   <body>
