--- a/login.html
+++ b/login.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login-form by Natty</title>
+        <script defer src="/_vercel/insights/script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
+    />
     <link rel="stylesheet" href="login.css" />
+    <title>Login-form by Natty</title>
+       <meta
+      name="description"
+      content="High-performance HTML based website template."
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -15,14 +24,7 @@
       <i class="fab fa-slack"></i>
       <span class="logo-name">Real_Natty &#174</span>
     </div>
-
-
-
-
-
-
-
-    <div class="container">
+<div class="container">
       <form action="#">
         <div class="title">Login</div>
         <div class="input-box">
