--- a/register.html
+++ b/register.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="register.css">
-
-       <link
+       <script defer src="/_vercel/insights/script.js"></script>
+    <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
     />
+    <link rel="stylesheet" href="register.css">
     <title>Register</title>
+    
+           <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        />
   </head>
   <body>
     
@@ -17,15 +22,7 @@
       <i class="fab fa-slack"></i>
       <span class="logo-name">Real_Natty &#174</span>
     </div>
-  
-
-
-
-
-
-
-   
-   <div class="container">
+  <div class="container">
     <form action="#">
         <header class="title">
       <h2>Sign Up</h2>
