--- a/security.html
+++ b/security.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/_vercel/insights/script.js"></script>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
-    <link rel="stylesheet" href="login.css" />
+    /> -->
+    <link rel="stylesheet" href="security.css" />
     <title>Security</title>
     <meta
       name="description"
